// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateHierarchy - Snapshot Tests > should match snapshot for complex hierarchy 1`] = `
"\`\`\`mermaid
%%{init: {"theme":"default","themeVariables":{"background":"#ffffff","primaryBorderColor":"#e0e0e0","primaryTextColor":"#212121","secondaryTextColor":"#757575","primaryColor":"#fafafa","secondaryColor":"#e3f2fd","tertiaryColor":"#fff8e1","lineColor":"#e0e0e0","fontSize":"14px","fontFamily":"system-ui, -apple-system, sans-serif"}}}%%
graph LR
    %% Complex Hierarchy - Category View

    subgraph coordination["👑 Coordination (1)"]
        main[["main"]]
    end

    subgraph memory["🧠 Memory (1)"]
        sub1(["sub1"])
    end

    subgraph analysis["🔍 Analysis (1)"]
        sub2{{"sub2"}}
    end

    subgraph other["📦 Other (1)"]
        worker1["worker1"]
    end

    %% Delegation Relationships
    main -->|delegates| sub1
    main -->|delegates| sub2
    sub1 -->|delegates| worker1

    %% Skills
    skill_coding(["coding"])
    skill_testing(["testing"])

    %% Styling
    classDef coordinator fill:#e1f5fe,stroke:#01579b,color:#01579b,stroke-width:3px
    classDef worker fill:#f3e5f5,stroke:#4a148c,color:#4a148c,stroke-width:2px
    classDef specialist fill:#e8f5e9,stroke:#1b5e20,color:#1b5e20,stroke-width:2px
    classDef reviewer fill:#fff3e0,stroke:#e65100,color:#e65100,stroke-width:2px
    classDef custom fill:#fce4ec,stroke:#880e4f,color:#880e4f,stroke-width:2px
    classDef input fill:#e8f5e9,stroke:#2e7d32,color:#2e7d32,stroke-width:2px
    classDef output fill:#ffebee,stroke:#c62828,color:#c62828,stroke-width:2px
    classDef hook fill:#fff8e1,stroke:#f57f17,color:#f57f17,stroke-width:2px,stroke-dasharray:5 5
    classDef mcp fill:#e0f2f1,stroke:#00695c,color:#00695c,stroke-width:2px
    classDef skill fill:#e3f2fd,stroke:#0d47a1,color:#0d47a1,stroke-width:2px,stroke-dasharray:5 5
    classDef subgraph_style fill:#fafafa,stroke:#9e9e9e,color:#424242,stroke-width:1px
    classDef more fill:#f5f5f5,stroke:#757575,stroke-dasharray:3 3,color:#757575
    classDef category fill:#fafafa,stroke:#9e9e9e,stroke-width:2px,color:#212121
    class main coordinator
    class sub1 specialist
    class sub2 reviewer
    class worker1 worker
    class skill_coding skill
    class skill_testing skill
    class coordination_more more
    class memory_more more
    class analysis_more more
    class other_more more
    class skills_more more
\`\`\`

---
*Generated by AgentScope on 2026-01-22 at 18:01:53.986Z*"
`;

exports[`generateHierarchy - Snapshot Tests > should match snapshot for simple hierarchy 1`] = `
"\`\`\`mermaid
%%{init: {"theme":"default","themeVariables":{"background":"#ffffff","primaryBorderColor":"#e0e0e0","primaryTextColor":"#212121","secondaryTextColor":"#757575","primaryColor":"#fafafa","secondaryColor":"#e3f2fd","tertiaryColor":"#fff8e1","lineColor":"#e0e0e0","fontSize":"14px","fontFamily":"system-ui, -apple-system, sans-serif"}}}%%
graph TB
    %% Agent Hierarchy - Category View

    subgraph coordination["👑 Coordination (1)"]
        coordinator[["coordinator"]]
    end

    subgraph other["📦 Other (1)"]
        worker["worker"]
    end

    %% Delegation Relationships
    coordinator -->|delegates| worker

    %% Styling
    classDef coordinator fill:#e1f5fe,stroke:#01579b,color:#01579b,stroke-width:3px
    classDef worker fill:#f3e5f5,stroke:#4a148c,color:#4a148c,stroke-width:2px
    classDef specialist fill:#e8f5e9,stroke:#1b5e20,color:#1b5e20,stroke-width:2px
    classDef reviewer fill:#fff3e0,stroke:#e65100,color:#e65100,stroke-width:2px
    classDef custom fill:#fce4ec,stroke:#880e4f,color:#880e4f,stroke-width:2px
    classDef input fill:#e8f5e9,stroke:#2e7d32,color:#2e7d32,stroke-width:2px
    classDef output fill:#ffebee,stroke:#c62828,color:#c62828,stroke-width:2px
    classDef hook fill:#fff8e1,stroke:#f57f17,color:#f57f17,stroke-width:2px,stroke-dasharray:5 5
    classDef mcp fill:#e0f2f1,stroke:#00695c,color:#00695c,stroke-width:2px
    classDef skill fill:#e3f2fd,stroke:#0d47a1,color:#0d47a1,stroke-width:2px,stroke-dasharray:5 5
    classDef subgraph_style fill:#fafafa,stroke:#9e9e9e,color:#424242,stroke-width:1px
    classDef more fill:#f5f5f5,stroke:#757575,stroke-dasharray:3 3,color:#757575
    classDef category fill:#fafafa,stroke:#9e9e9e,stroke-width:2px,color:#212121
    class coordinator coordinator
    class worker worker
    class coordination_more more
    class other_more more
    class skills_more more
\`\`\`

---
*Generated by AgentScope on 2026-01-22 at 18:01:53.985Z*"
`;
